k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saleor-dev
  labels:
    environment: dev
    app: saleor
