k8s/dev/ingress-v2.1.0.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-ingress-v2-1-0
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: storefront-dev.aksa.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saleor-storefront-with-chat-v2-1-0
            port:
              number: 3000
  - host: backoffice-dev.aksa.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saleor-backoffice-with-chat-v2-1-0
            port:
              number: 3000
  - host: api-dev.aksa.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
  - host: chat-service-dev.aksa.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saleor-chat-service-v2-1-0
            port:
              number: 3001
